# pyo3-tutorial

./: .gitignore  Cargo.toml  main.py  pyproject.toml
notes/: 25-11-25-plan.md  25-11-25-starting.md  25-11-26-work.md
scripts/: hello.py
src/: lib.rs  petunia.pyi
